--- a/WebContent/candidate.html
+++ b/WebContent/candidate.html
@@ -8,36 +8,43 @@
 
 <!-- Angular JS library -->
 
+<script type="text/javascript" src="app/js/quiz.js"></script>
 
 
 <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
 
-
+<link rel="stylesheet" type="text/css" href="app/css/quiz.css">
 
 </head>
 
-<body ng-controller="examcontroller">
+<body>
 	<header class="page-header">
 		<h1>
 			<i>Domo Examination Portal</i>
 		</h1>
 		<br>
 	</header>
-	<div class="login-box">
-		<div class="lb-header">
-			<a href="#/exams" class="active" id="login-box-link">Exam</a> 
-			<a href="#/students" class="active" id="login-box-link">Student Information</a> 
+<section>
+		<div id="a" onclick="a.style.display='none';" class="lb-header">
+			<a href="#/students"  class="active" id="login-box-link">ViewExams</a> 
+		   <a href="#/startexam"  class="active" id="login-box-link">Start Exam</a> 
 		</div>
-	</div>
+		
+		</div>
+	
 
 	<div ng-view="">
 		</div>
+		
 	<br>
-	<footer class="page-footer">
+	<div class="page-footer">
 		<p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
-	</footer>
+	</div>
+
+<section>
 
 	<script src="app/lib/angular.js"></script>
+  
 	<script src="app/lib/angular-route.js"></script>
 	<script src="app/lib/angular-resource.js"></script>
 	<script src="app/js/underscore.js"></script>
@@ -45,6 +52,11 @@
 	<script src="app/js/app.js" type="text/javascript"></script>
 	<script src="app/js/controllers.js"></script>
 	<script src="app/js/directives.js"></script>
+	
 	<script src="app/js/services.js"></script>
+
+
+
+
 </body>
 </html>
