--- a/WebContent/candidate.html
+++ b/WebContent/candidate.html
@@ -4,19 +4,11 @@
 <title>DOMO Exam Portal</title>
 <meta name="viewport"
 	content="width=device-width, height=device-height, initial-scale=1.0">
-
-
 <!-- Angular JS library -->
-
 <script type="text/javascript" src="app/js/quiz.js"></script>
-
-
 <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
-
 <link rel="stylesheet" type="text/css" href="app/css/quiz.css">
-
 </head>
-
 <body>
 	<header class="page-header">
 		<h1>
@@ -24,27 +16,18 @@
 		</h1>
 		<br>
 	</header>
-<section>
+	<section>
 		<div id="a" onclick="a.style.display='none';" class="lb-header">
-			<a href="#/students"  class="active" id="login-box-link">ViewExams</a> 
-		   <a href="#/startexam"  class="active" id="login-box-link">Start Exam</a> 
+			<a href="#/students" class="active" id="login-box-link">ViewExams</a>
+			<a href="#/startexam" class="active" id="login-box-link">Start Exam</a>
 		</div>
-		
+		<div ng-view=""></div>
+		<br>
+		<div class="page-footer">
+			<p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
 		</div>
-	
-
-	<div ng-view="">
-		</div>
-		
-	<br>
-	<div class="page-footer">
-		<p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
-	</div>
-
-<section>
-
+	</section>
 	<script src="app/lib/angular.js"></script>
-  
 	<script src="app/lib/angular-route.js"></script>
 	<script src="app/lib/angular-resource.js"></script>
 	<script src="app/js/underscore.js"></script>
@@ -52,11 +35,6 @@
 	<script src="app/js/app.js" type="text/javascript"></script>
 	<script src="app/js/controllers.js"></script>
 	<script src="app/js/directives.js"></script>
-	
 	<script src="app/js/services.js"></script>
-
-
-
-
 </body>
 </html>
