Changes made in css html and js files

--- a/WebContent/exam.html
+++ b/WebContent/exam.html
@@ -15,7 +15,7 @@
 		<br>
 	</header>
 	<div class="lb-header">
-		<a href="#/exams" class="active" id="login-box-link">Exam</a> 
+		<a href="#/exam" class="active" id="login-box-link">Exam</a> 
 		<a href="#/students" class="active" id="login-box-link">Student Information</a>
 	</div>
 	<div ng-view=""></div>
