--- a/WebContent/candidate.html
+++ b/WebContent/candidate.html
@@ -5,7 +5,7 @@
 <meta name="viewport"
 	content="width=device-width, height=device-height, initial-scale=1.0">
 <!-- Angular JS library -->
-<script type="text/javascript" src="app/js/quiz.js"></script>
+<!-- <script type="text/javascript" src="app/js/quiz.js"></script>-->
 <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
 <link rel="stylesheet" type="text/css" href="app/css/quiz.css">
 </head>
@@ -17,12 +17,11 @@
 		<br>
 	</header>
 	<section>
-		<div id="a" onclick="a.style.display='none';" class="lb-header">
-			<a href="#/allexams/10000" class="active" id="login-box-link">ViewAllExams</a>
-			<a href="#/currentexams/10000" class="active" id="login-box-link">ViewCurrentExams</a>
+		<div id="a" onclick="a.style.display='none';" class="lb-header" ng-controller="usercontroller">
+			<a href="#/allexams/{{userid}}" class="active" id="login-box-link">ViewAllExams</a>
+			<a href="#/currentexams/{{userid}}" class="active" id="login-box-link">ViewCurrentExams</a>
 		</div>
 		<div ng-view="">
-		
 		</div>
 		<br>
 		<div class="page-footer">
@@ -34,6 +33,7 @@
 	<script src="app/lib/angular-resource.js"></script>
 	<script src="app/js/underscore.js"></script>
 	<script src="app/js/angular-underscore-module.js"></script>
+	<script src="app/js/angular-cookies.min.js"></script>
 	<script src="app/js/app.js" type="text/javascript"></script>
 	<script src="app/js/controllers.js"></script>
 	<script src="app/js/directives.js"></script>
