--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,6 +29,7 @@
 	<script src="app/lib/angular-resource.js"></script>
 	<script src="app/js/underscore.js"></script>
 	<script src="app/js/angular-underscore-module.js"></script>
+	<script src="app/js/angular-cookies.min.js"></script>
 	<script src="app/js/app.js" type="text/javascript"></script>
 	<script src="app/js/controllers.js"></script>
 	<script src="app/js/directives.js"></script>
