--- a/WebContent/candidate.html
+++ b/WebContent/candidate.html
@@ -6,6 +6,7 @@
 	content="width=device-width, height=device-height, initial-scale=1.0">
 <!-- Angular JS library -->
 <!-- <script type="text/javascript" src="app/js/quiz.js"></script>-->
+<!-- <script src="app/js/quiz.js"></script> -->
 <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
 <link rel="stylesheet" type="text/css" href="app/css/quiz.css">
 </head>
@@ -34,6 +35,7 @@
 	<script src="app/js/underscore.js"></script>
 	<script src="app/js/angular-underscore-module.js"></script>
 	<script src="app/js/angular-cookies.min.js"></script>
+	 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 	<script src="app/js/app.js" type="text/javascript"></script>
 	<script src="app/js/controllers.js"></script>
 	<script src="app/js/directives.js"></script>
