--- a/WebContent/exam.html
+++ b/WebContent/exam.html
@@ -20,9 +20,9 @@
 	</div>
 	<div ng-view=""></div>
 	<br>
-	<footer class="page-footer">
+	<div class="page-footer">
 		<p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
-	</footer>
+	</div>
 	<script src="app/lib/angular.js"></script>
 	<script src="app/lib/angular-route.js"></script>
 	<script src="app/lib/angular-resource.js"></script>
