--- a/WebContent/candidate.html
+++ b/WebContent/candidate.html
@@ -5,10 +5,9 @@
 <meta name="viewport"
 	content="width=device-width, height=device-height, initial-scale=1.0">
 <!-- Angular JS library -->
-<!-- <script type="text/javascript" src="app/js/quiz.js"></script>-->
-<!-- <script src="app/js/quiz.js"></script> -->
 <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
 <link rel="stylesheet" type="text/css" href="app/css/quiz.css">
+
 </head>
 <body>
 	<header class="page-header">
@@ -18,9 +17,9 @@
 		<br>
 	</header>
 	<section>
-		<div id="a" onclick="a.style.display='none';" class="lb-header" ng-controller="usercontroller">
-			<a href="#/allexams/{{userid}}" class="active" id="login-box-link">ViewAllExams</a>
-			<a href="#/currentexams/{{userid}}" class="active" id="login-box-link">ViewCurrentExams</a>
+		<div  class="lb-header" ng-controller="usercontroller">
+			<a href="#/allexams/{{userid}}" class="active" id="login-box-link">View Previous Result</a>
+			<a href="#/currentexams/{{userid}}" class="active" id="login-box-link">View Upcoming Exams</a>
 		</div>
 		<div ng-view="">
 		</div>
