--- a/WebContent/candidate.html
+++ b/WebContent/candidate.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <html ng-app="myapp">
-<head>
-<title>DOMO Exam Portal</title>
-<meta name="viewport"
-	content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- Angular JS library -->
-<link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
-<link rel="stylesheet" type="text/css" href="app/css/quiz.css">
-
-</head>
-<body>
-	<header class="page-header">
-		<h1>
-			<i>Domo Examination Portal</i>
-		</h1>
-		<br>
-	</header>
-	<section>
-		<div  class="lb-header" ng-controller="usercontroller">
-			<a href="#/allexams/{{userid}}" class="active" id="login-box-link">View Previous Result</a>
-			<a href="#/currentexams/{{userid}}" class="active" id="login-box-link">View Upcoming Exams</a>
-		</div>
-		<div ng-view="">
-		</div>
-		<br>
-		<div class="page-footer">
-           		<p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
-		</div>
-	</section>
-	<script src="app/lib/angular.js"></script>
-	<script src="app/lib/angular-route.js"></script>
-	<script src="app/lib/angular-resource.js"></script>
-	<script src="app/js/underscore.js"></script>
-	<script src="app/js/angular-underscore-module.js"></script>
-	<script src="app/js/angular-cookies.min.js"></script>
-	 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-	<script src="app/js/app.js" type="text/javascript"></script>
-	<script src="app/js/controllers.js"></script>
-	<script src="app/js/directives.js"></script>
-	<script src="app/js/services.js"></script>
-</body>
+  <head>
+    <title>DOMO Exam Portal</title>
+    <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
+    <link rel="stylesheet" type="text/css" href="app/css/quiz.css">
+  </head>
+  <body>
+    <header class="page-header">
+     <h1>
+       <i>Domo Examination Portal</i>
+     </h1><br>
+    </header>
+    <section>
+      <div  class="lb-header" ng-controller="userController">
+        <a href="#/previousexams/{{userid}}" class="active" id="login-box-link">View Previous Result</a>
+	    <a href="#/currentexams/{{userid}}" class="active" id="login-box-link">View Upcoming Exams</a>
+	     <a href="index.html"><img title="logout" align="right" style="width:21px" src="app/img/logout.png" /></a>
+      </div>
+      <div ng-view=""></div><br>
+      <div class="page-footer">
+        <p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
+      </div>
+    </section>
+    <script src="app/lib/angular.js"></script>
+    <script src="app/lib/angular-route.js"></script>
+    <script src="app/lib/angular-resource.js"></script>
+    <script src="app/js/underscore.js"></script>
+    <script src="app/js/angular-underscore-module.js"></script>
+    <script src="app/js/angular-cookies.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="app/js/app.js" type="text/javascript"></script>
+   <script src="app/js/controllers/mainController.js"></script>
+	<script src="app/js/controllers/signInController.js"></script>
+	<script src="app/js/controllers/signUpController.js"></script>
+	<script src="app/js/controllers/userController.js"></script>
+	<script src="app/js/controllers/logOutController.js"></script>
+    <script src="app/js/directives/mainDirective.js"></script>
+    <script src="app/js/directives/examDetailsDirective.js"></script>
+    <script src="app/js/directives/examFormDirective.js"></script>
+    <script src="app/js/directives/getExamInfoDirective.js"></script>
+    <script src="app/js/directives/startExamDirective.js"></script>
+    <script src="app/js/directives/studentExamInfoDirective.js"></script>
+    <script src="app/js/directives/getStudentInfoDirective.js"></script>
+    <script src="app/js/services/mainService.js"></script>
+    <script src="app/js/services/candidateInfoService.js"></script>
+    <script src="app/js/services/authenticationService.js"></script>
+    <script src="app/js/services/examInfoService.js"></script>
+    <script src="app/js/services/questionService.js"></script>
+  </body>
 </html>
