--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html ng-app="myapp">
-<head>
-<title>DOMO Exam Portal</title>
-<meta name="viewport"
-	content="width=device-width, height=device-height, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="app/css/mystyle.css">
-</head>
-<body>
+  <head>
+    <title>DOMO Exam Portal</title>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="app/css/mystyle.css">
+  </head>
+  <body ng-controller="logOutController">
 	<header class="page-header">
-		<h1>
-			<i>Domo Examination Portal</i>
-		</h1>
-		<br>
+	  <h1>
+	    <i>Domo Examination Portal</i>
+	  </h1>
+	  <br>
 	</header>
 	<div class="login-box">
-		<div class="lb-header" ng-if="location.path() != '/signin'">
-			<a href="#/signin" class="active" id="login-box-link">Login</a> <a
-				href="#/signup" class="active" id="signup-box-link">Sign Up</a>
-		</div>
+	  <div class="lb-header">
+	    <a href="#/signin" class="active" id="login-box-link">Sign In</a> 
+		<a href="#/signup" class="active" id="signup-box-link">Sign Up</a>
+	  </div>
 	</div>
-	<div ng-view=""></div>
-	<br>
+	<div ng-view=""></div><br>
 	<div class="page-footer">
-		<p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
+	  <p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
 	</div>
 	<script src="app/lib/angular.js"></script>
 	<script src="app/lib/angular-route.js"></script>
@@ -31,8 +29,22 @@
 	<script src="app/js/angular-underscore-module.js"></script>
 	<script src="app/js/angular-cookies.min.js"></script>
 	<script src="app/js/app.js" type="text/javascript"></script>
-	<script src="app/js/controllers.js"></script>
-	<script src="app/js/directives.js"></script>
-	<script src="app/js/services.js"></script>
-</body>
+	<script src="app/js/controllers/mainController.js"></script>
+	<script src="app/js/controllers/signInController.js"></script>
+	<script src="app/js/controllers/signUpController.js"></script>
+	<script src="app/js/controllers/userController.js"></script>
+	<script src="app/js/controllers/logOutController.js"></script>
+	<script src="app/js/directives/mainDirective.js"></script>
+	<script src="app/js/directives/examDetailsDirective.js"></script>
+	<script src="app/js/directives/examFormDirective.js"></script>
+	<script src="app/js/directives/getExamInfoDirective.js"></script>
+	<script src="app/js/directives/getStudentInfoDirective.js"></script>
+	<script src="app/js/directives/startExamDirective.js"></script>
+	<script src="app/js/directives/studentExamInfoDirective.js"></script>
+	<script src="app/js/services/mainService.js"></script>
+	<script src="app/js/services/candidateInfoService.js"></script>
+	<script src="app/js/services/authenticationService.js"></script>
+	<script src="app/js/services/examInfoService.js"></script>
+	<script src="app/js/services/questionService.js"></script>
+  </body>
 </html>
