--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html ng-app="myapp">
   <head>
-
-    <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
+  <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
   </head>
   <body>
-    <header id="background" >
+    <header>
 	  <h1 class="page-header">
 	    <i>Domo Examination Portal</i>
 	  </h1><br>
-	
 	<div class="lb-header" ng-controller="userController">
 	  <a href="#/examinfo" class="active" id="login-box-link">Exam Information</a> 
 	  <a href="#/studentinfo" class="active" id="login-box-link">Student Information</a>
-	  <a href="index.html"><img title="logout" align="right" style="width:21px" src="app/img/logout.png"/></a>
+	  </div>
+	<div class="logout">
+	  <a class="active" href="index.html"><img title="logout" align="right" style="width:21px" src="app/img/logout.png"/></a>
 	</div>
 	</header>
 	<div ng-view=""></div><br>
