added favicon icon and corrected misplaced logout icon

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -2,6 +2,7 @@
 <html ng-app="myapp">
   <head>
   <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
+  <link rel="icon" href="app/img/domo_icon.png" type="image/gif" sizes="16x16">
   </head>
   <body>
     <header>
@@ -12,7 +13,7 @@
 	  <a href="#/examinfo" class="active" id="login-box-link">Exam Information</a> 
 	  <a href="#/studentinfo" class="active" id="login-box-link">Student Information</a>
 	  </div>
-	<div class="logout">
+	 <div style="display:inline-block;">
 	  <a class="active" href="index.html"><img title="logout" align="right" style="width:21px" src="app/img/logout.png"/></a>
 	</div>
 	</header>
