--- a/WebContent/candidate.html
+++ b/WebContent/candidate.html
@@ -3,7 +3,7 @@
   <head>
     <title>DOMO Exam Portal</title>
     <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
-    <link rel="stylesheet" type="text/css" href="app/css/quiz.css">
+    <link rel="icon" href="app/img/domo_icon.png" type="image/gif" sizes="16x16">
   </head>
   <body>
     <header class="page-header">
