--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,6 +4,7 @@
     <title>DOMO Exam Portal</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="app/css/mystyle.css">
+    <link rel="icon" href="app/img/domo_icon.png" type="image/gif" sizes="16x16">
   </head>
   <body ng-controller="logOutController">
 	<header class="page-header">
