--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myapp">
   <head>
+  <title>DOMO Exam Portal</title>
   <link rel="stylesheet" type="text/css" href="app/css/mystyle1.css">
   <link rel="icon" href="app/img/domo_icon.png" type="image/gif" sizes="16x16">
   </head>
