--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -45,5 +45,8 @@
 	<script src="app/js/services/authenticationService.js"></script>
 	<script src="app/js/services/examInfoService.js"></script>
 	<script src="app/js/services/questionService.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="app/js/active.js"></script>
   </body>
 </html>
