style of buttons corrected during quiz

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -15,7 +15,7 @@
 	  <a href="#/studentinfo" class="active" id="login-box-link">Student Information</a>
 	  </div>
 	 <div style="display:inline-block;">
-	  <a href="index.html"><img title="logout" align="right" style="width:21px" src="app/img/logout.png"/></a>
+	  <a href="index.html"><img title="logout" align="right" style="width:21px;margin-left:338px;" src="app/img/logout.png"/></a>
 	</div>
 	</header>
 	<div ng-view=""></div><br>
