--- a/WebContent/candidate.html
+++ b/WebContent/candidate.html
@@ -17,7 +17,7 @@
 	    <a href="#/currentexams/{{userid}}" class="active" id="login-box-link">Upcoming Exams</a>
 	  </div>
 	    <div style="display:inline-block;">
-	      <a href="index.html"><img title="logout" align="right" style="width:21px" src="app/img/logout.png"/></a>
+	      <a href="index.html"><img title="logout" align="right" style="width:21px;margin-left:338px;" src="app/img/logout.png"/></a>
 	    </div>
       <div ng-view=""></div><br>
       <div class="page-footer">
