--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,7 +19,7 @@
 	</div>
 	<div ng-view=""></div><br>
 	<div class="page-footer">
-	  <p>© 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
+	  <p>ï¿½ 2015 Domo Software Pvt Ltd All Rights Reserved.</p>
 	</div>
 	<script src="app/lib/angular.js"></script>
 	<script src="app/lib/angular-route.js"></script>
